# MolSim

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LRZ.md  README.md  testVtune.sh  timeThreads.sh
.github/workflows/: CI.yml
cmake/modules/: doxygen.cmake
input/: assignment5_task1.xml  assignment5_task1_a.xml  checkpoint.txt  eingabe-test2.txt  input_xml_example.xml  perf.xml  performanceTest.txt  solar-system.txt  sphere-test.txt  worksheet2-colliding-cubes.txt  worksheet2-cube-onto-layer.txt  worksheet2-layerfun.txt  worksheet2.txt  worksheet4-liquid.txt  worksheet4-periodic-boundary.txt
input/A5 Szenarios/Task 2/: bigExp.xml  smallExp.xml
input/A5 Szenarios/Task 3/: task3 part1.xml  task3 part2.xml
input/Assignment4/Task2/: task2_bigExp.xml  task2_smallExp.xml
input/Assignment4/Task3/: task3_part1.xml  task3_part2.xml
input/Assignment5/Task1/: membrane_periodic.xml  sphere_drop.xml  sphere_drop0.xml  sphere_drop1.xml  sphere_drop2.xml  task1.xml  tear_membrane.xml
input/Assignment5/Task3/: 3DRayleighTaylor.xml  input_task3.xml
input/Assignment5/Task5/: input_task5.1.xml  input_task5.2.xml  input_task5.3.xml  task51_test.xml
input/OldInputFiles/: grid-test.txt  sphere-example.txt  sphere-test2.txt  worksheet4-liquid-small.txt  worksheet4-periodic-boundary.txt
input/Performance/: 3dRayleighTaylorLocks.xml  3dRayleighTaylorMultiple.xml  3dRayleighTaylorSingle.xml  contest1Locks.xml  contest1Multiple.xml  contest1Single.xml  homogen.xml  inhomogen.xml
src/: CMakeLists.txt  Configuration.cpp  Configuration.h  FileReader.cpp  FileReader.h  IModel.h  MolSim.cpp  NewtonsLawModel.cpp  NewtonsLawModel.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  Simulation.cpp  Simulation.h
src/dataStructures/: Cell.h  IContainer.h  ILinkedCellsBoundary.h  LinkedCellsBoundary.cpp  LinkedCellsBoundary.h  LinkedCellsContainer.cpp  LinkedCellsContainer.h  MembraneMolecule.cpp  MembraneMolecule.h  MembraneParticle.cpp  MembraneParticle.h  MembraneStructure.cpp  MembraneStructure.h  Molecule.h  NanoTubeStructure.cpp  NanoTubeStructure.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  VectorContainer.h
src/dataStructures/ParalizedLinkedCell/: LinkedCellsContainerColouringSingle.h
src/dataStructures/parallelizedLinkedCell/: LinkedCellsContainerColouringMultiple.h  LinkedCellsContainerColouringSingle.h  LinkedCellsContainerLocks.h
src/inputReader/: FileReader.cpp  FileReader.h  ILineProcessor.h  LineProcessorCheckpoint.cpp  LineProcessorCheckpoint.h  LineProcessorCuboid.cpp  LineProcessorCuboid.h  LineProcessorSingle.cpp  LineProcessorSingle.h  LineProcessorSphere.cpp  LineProcessorSphere.h  ParticleGenerator.cpp  ParticleGenerator.h
src/inputReader/XMLFileReader/: CuboidArg.cpp  CuboidArg.h  SimulationArg.cpp  SimulationArg.h  SphereArg.cpp  SphereArg.h  XMLParser.h  input.cxx  input.hxx  input.xsd  input_xml_example.xml
src/inputReader/XMLFileReader/Args/: CuboidArg.cpp  CuboidArg.h  LinkedCellArg.cpp  LinkedCellArg.h  LinkedCellsColouringArg.cpp  LinkedCellsColouringArg.h  MembraneArg.cpp  MembraneArg.h  MembraneForceArg.cpp  MembraneForceArg.h  ParticleArg.cpp  ParticleArg.h  SimulationArg.cpp  SimulationArg.h  SphereArg.cpp  SphereArg.h  StatArg.cpp  StatArg.h  ThermostatArg.cpp  ThermostatArg.h
src/inputReader/XMLFileReader/XMLFiles/: input.cpp  input.cxx  input.h  input.hxx  input.xsd
src/model/: HarmonicPotentialModel.cpp  HarmonicPotentialModel.h  IModel.h  LennardJonesModel.cpp  LennardJonesModel.h  NewtonsLawModel.cpp  NewtonsLawModel.h  SmoothedLennardJonesModel.cpp  SmoothedLennardJonesModel.h  Thermostat.cpp  Thermostat.h
src/outputWriter/: CheckpointFileWriter.cpp  CheckpointFileWriter.h  IWriter.h  NoWriter.h  OutputModel.h  StatisticsWriter.cpp  StatisticsWriter.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h  vtk-unstructured.cpp  vtk-unstructured.h  vtk-unstructured.xsd
src/utils/: ArrayUtils.h  Interfaces.h  MaxwellBoltzmannDistribution.h  MolSimEnums.h  SimulationUtils.cpp  SimulationUtils.h  Statistics.h  ThermodynamicStatistics.cpp  ThermodynamicStatistics.h
tests/: CMakeLists.txt
tests/dataStructures/: LinkedCellsBoundaryTest.cpp  LinkedCellsContainerTest.cpp  MembraneMoleculeTest.cpp  ParticleContainer.cpp  ParticleContainerTest.cpp  ThermostatTest.cpp
tests/dataStructures/parallelizedLinkedCell/: LinkedCellsContainerColouringMultipleTest.cpp  LinkedCellsContainerColouringSingleTest.cpp
tests/inputReader/: FileReaderTest.cpp  LineProcessorCuboidTest.cpp  ParticleGeneratorTest.cpp  XMLReaderTest.cpp  XMLReaderTest.h
tests/model/: LennardJonesModelTest.cpp  SmoothedLennardJonesModelTest.cpp  StatisticsTest.cpp
tests/resources/: fileReaderTest.txt
tests/resources/XMLTestCases/: Initialization1.xml  Initialization2.xml  cuboidTest.xml  missingDeltaT.xml  missingEndTime.xml  missingWriteOutFrequency.xml  sphereTest.xml
tests/utils/: TestUtils.cpp  TestUtils.h  TestUtilsBoundaries.h
